--- a/style.css
+++ b/style.css
@@ -25,6 +25,17 @@ body {
 }
 
 
-.fondoUsuario{
+.seccionResaltada{
     background-color: #5d7599;
+}
+
+.circuloFecha {
+    width: 60px;
+    height: 60px;
+}
+
+.dias{
+  background-color:#6883ac;
+  width: 50px;           
+  height: 50px;
 }
